--- a/Actividad 1/actividad 1.html
+++ b/Actividad 1/actividad 1.html
@@ -14,7 +14,7 @@
     <h2>Atributos</h2>
     <p>Los atributos nos dan información adicional de las etiquetas HTML.</p>
     <h3>Atributo href</h3>
-    <p>Esto es un párrafo con un enlace: <a href="./https://www.callofduty.com/es/warzone">la página oficial de Warzone</a></p>
+    <p>Esto es un párrafo con un enlace: <a href="https://www.callofduty.com/es/warzone">la página oficial de Warzone</a></p>
     <h2>Atributo src en imágenes</h3>
     <img src="./warzone.jpg" alt="Imagen del videojuego Call of Duty Warzone" title="Call of Duty Warzone" width="200">
     <a href="./IMG/warzone.jpg" target="_blank" >
@@ -27,7 +27,7 @@
     <h2>Atributo title</h2>
     <p title="Soy un tooltip" >Esto es un párrafo</p>
     <img src="./warzone.jpg" alt="Ver imagen Call of Duty" title="Ver imagen Call of Duty" width="200">
-    <a href="./https://www.callofduty.com/es/warzone" target="_blank" >
+    <a href="https://www.callofduty.com/es/warzone">
     <img src="./warzone.jpg" alt="Ver imagen Call of Duty" title="Accede a la web de Call of Duty" width="200"> 
 
 </body>
