--- a/Actividad 1/actividad 1.html
+++ b/Actividad 1/actividad 1.html
@@ -15,9 +15,9 @@
     <p>Los atributos nos dan información adicional de las etiquetas HTML.</p>
     <h3>Atributo href</h3>
     <p>Esto es un párrafo con un enlace: <a href="https://www.callofduty.com/es/warzone">la página oficial de Warzone</a></p>
-    <h2>Atributo src en imágenes</h3>
+    <h3>Atributo src en imágenes</h3>
     <img src="./warzone.jpg" alt="Imagen del videojuego Call of Duty Warzone" title="Call of Duty Warzone" width="200">
-    <a href="./IMG/warzone.jpg" target="_blank" >
+    <a href="./warzone.jpg" target="_blank" >
     <img src="./warzone.jpg" alt="Imagen del videojuego Call of Duty Warzone" title="Call of Duty Warzone" width="200"> 
     </a>
     <h2>Atributo style</h3>
