--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     
 <ul>
     <li><a href="./Actividad 1/actividad 1.html"> Actividades 1</a></li>
-    <li>Actividades 2</a></li>
-    <li>Actividades 3</a></li>
-    <li>Actividades 4</a></li>
-    <li>Actividades 5</a></li>
-    <li>Actividades 6</a></li>
+    <li><a href="./Actividad 2/index.html"> Actividades 2</a></li>
+    <li><a href="./Actividad 3"> Actividades 3</a></li>
+    <li><a href="./Actividad 4"> Actividades 4</a></li>
+    <li><a href="./Actividad 5"> Actividades 5</a></li>
+    <li><a href="./Actividad 6"> Actividades 6</a></li>
 </ol>
 
 </body>
