--- a/Actividad 3/actividad3.html
+++ b/Actividad 3/actividad3.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Guía Rápida SMR: Componentes de PC y Seguridad Informática</h1>
     <p>Documento de introducción a dos módulos clave del ciclo: Montaje de Equipos y Seguridad Informática.</p>
-    <h2>Índice de Contenidos</h2>
+    <h2 id="índice">Índice de Contenidos</h2>
     <blockquote>
 <a href="Hardware">A.Componentes Clave de un PC (Hardware)</a>
 <br>
@@ -21,28 +21,29 @@
 <P>*(Imagen: Un disco SSD, un componente vital para el almacenamiento actual)*</P>
 <h3>Lista de Componentes Principales:</h3>
 <ul>
-<li>CPU (Unidad Central de Procesamiento): El "cerebro" del ordenador.</li>
-Núcleos de Rendimiento (P-cores): Para tareas intensivas.
-Núcleos de Eficiencia (E-cores): Para tareas de fondo y bajo consumo.
-<li>RAM (Memoria de Acceso Aleatorio): Memoria volátil y ultrarrápida.</li>
-Placa Base (Motherboard): La plataforma central que interconecta todos los demás componentes.
-Almacenamiento (SSD/HDD): Guarda la información de forma persistente.
-Fuente de Alimentación (PSU): Convierte la corriente alterna (AC) en la continua (DC).</ul>
+<li><strong>CPU (Unidad Central de Procesamiento):</strong> El <strong>"cerebro"</strong> del ordenador.</li>
+<ul> <li> Núcleos de Rendimiento (P-cores): Para tareas intensivas.</li></ul>
+<ul> <li>Núcleos de Eficiencia (E-cores): Para tareas de fondo y bajo consumo.</li></ul>
+<li><strong>RAM (Memoria de Acceso Aleatorio):</strong> Memoria <strong>volátil</strong> y ultrarrápida.</li>
+<li><strong>Placa Base (Motherboard):</strong> La <strong>plataforma central</strong> que interconecta todos los demás componentes.</li>
+<li><strong>Almacenamiento (SSD/HDD):</strong> Guarda la información de forma <strong>persistente.</strong></li>
+<li><strong>Fuente de Alimentación (PSU):</strong> Convierte la corriente alterna (AC) en la continua (DC).</li></ul>
+<a href="índice">volver al Índice</a>
+<hr>
+<h2>5 Consejos de Ciberseguridad Básica</h2>
+<p>La seguridad pasiva y activa es crítica. Estos 5 consejos son la base para proteger cualquier sistema:</p>
+<img src="./img/ciberseguridad.jpg" alt="Concepto de ciberseguridad con un escudo y elementos digitales" width="300">
+<p>*(Imagen: Un concepto visual de protección digital y ciberseguridad)*</p>
+<table border="2">
+<thead>
+<tr>
+<th>Estrategias Fundamentales de Protección</th>
 
-Volver al Índice
-
-5 Consejos de Ciberseguridad Básica
-La seguridad pasiva y activa es crítica. Estos 5 consejos son la base para proteger cualquier sistema:
-
-Concepto de ciberseguridad con un escudo y elementos digitales
-*(Imagen: Un concepto visual de protección digital y ciberseguridad)*
-
-Estrategias Fundamentales de Protección
 Contraseñas Robustas y Únicas	Usar combinaciones largas (más de 12 caracteres), con mezcla de tipos y, crucialmente, no repetir la misma clave en múltiples servicios.
 Actualizaciones Periódicas (Parcheo)	Mantener el Sistema Operativo y el software de terceros al día para corregir vulnerabilidades de seguridad conocidas (exploits).
 Doble Factor de Autenticación (2FA)	Añadir una capa de seguridad que requiere un segundo código (normalmente desde el móvil) además de la contraseña. Es la defensa más efectiva contra el robo de credenciales.
 Copias de Seguridad (Backup)	Guardar regularmente los datos importantes en un medio externo y desconectado (regla 3-2-1). Permite la recuperación ante fallos de hardware o ataques de ransomware.
-Uso de Antivirus/Firewall	El firewall bloquea el tráfico de red no autorizado, mientras que el antivirus/anti-malware protege contra códigos maliciosos conocidos en el equipo local.
+Uso de Antivirus/Firewall	El firewall bloquea el tráfico de red no autorizado, mientras que el antivirus/anti-malware protege contra códigos maliciosos conocidos en el equipo local.</table>
 Recursos Adicionales:
 Para aprender más sobre Ciberseguridad, visita el Portal del Instituto Nacional de Ciberseguridad (INCIBE) (Este enlace se abre en una nueva pestaña).
 
