--- a/Actividad 3/actividad3.html
+++ b/Actividad 3/actividad3.html
@@ -10,9 +10,9 @@
     <p>Documento de introducción a dos módulos clave del ciclo: Montaje de Equipos y Seguridad Informática.</p>
     <h2 id="índice">Índice de Contenidos</h2>
     <blockquote>
-<a href="Hardware">A.Componentes Clave de un PC (Hardware)</a>
+<a href="#Hardware">A.Componentes Clave de un PC (Hardware)</a>
 <br>
-<a href="Básica">B.5 Consejos de Ciberseguridad Básica</a>
+<a href="#Consejos">B.5 Consejos de Ciberseguridad Básica</a>
 </blockquote>
 <hr>
 <h2 id="Hardware">Componentes Clave de un PC (Hardware)</h2>
@@ -30,26 +30,50 @@
 <li><strong>Fuente de Alimentación (PSU):</strong> Convierte la corriente alterna (AC) en la continua (DC).</li></ul>
 <a href="índice">volver al Índice</a>
 <hr>
-<h2>5 Consejos de Ciberseguridad Básica</h2>
+<h2 id="Consejos">5 Consejos de Ciberseguridad Básica</h2>
 <p>La seguridad pasiva y activa es crítica. Estos 5 consejos son la base para proteger cualquier sistema:</p>
 <img src="./img/ciberseguridad.jpg" alt="Concepto de ciberseguridad con un escudo y elementos digitales" width="300">
 <p>*(Imagen: Un concepto visual de protección digital y ciberseguridad)*</p>
 <table border="2">
-<thead>
-<tr>
-<th>Estrategias Fundamentales de Protección</th>
+ <thead>
+   <tr>
+     <th colspan="2">5 Consejos Fundamentales de Ciberseguridad</th>
+   </tr>
+   <tr>
+     <th>Estrategia Fundamental de Protección</th>
+     <th>Descripción</th>
+   </tr>
+ </thead>
+ <tbody>
+   <tr>
+     <td><strong>Contraseñas Robustas y Únicas</strong></td>
+     <td>Usar combinaciones largas (más de 12 caracteres), con mezcla de tipos, y, crucialmente, no repetir la misma clave en múltiples servicios.</td>
+   </tr>
+   <tr>
+     <td><strong>Actualizaciones Periódicas (Parches)</strong></td>
+     <td>Mantener el Sistema Operativo y el software de terceros al día para corregir vulnerabilidades de seguridad conocidas (exploits).</td>
+   </tr>
+   <tr>
+     <td><strong>Doble Factor de Autenticación (2FA)</strong></td>
+     <td>Añadir una capa de seguridad que requiera un segundo código (generalmente desde un móvil) además de la contraseña. Es la defensa más efectiva contra el robo de credenciales.</td>
+   </tr>
+   <tr>
+     <td><strong>Copias de Seguridad (Backups)</strong></td>
+     <td>Guardar regularmente los datos importantes en un medio externo y desconectado (regla 3-2-1). Permite la recuperación ante fallos de hardware o ataques de ransomware.</td>
+   </tr>
+   <tr>
+     <td><strong>Uso de Antivirus/Firewall</strong></td>
+     <td>El firewall bloquea el tráfico de red no autorizado, mientras que el antivirus/anti-malware protege contra códigos maliciosos conocidos en el equipo local.</td>
+   </tr>
+ </tbody>
+</table>
 
-Contraseñas Robustas y Únicas	Usar combinaciones largas (más de 12 caracteres), con mezcla de tipos y, crucialmente, no repetir la misma clave en múltiples servicios.
-Actualizaciones Periódicas (Parcheo)	Mantener el Sistema Operativo y el software de terceros al día para corregir vulnerabilidades de seguridad conocidas (exploits).
-Doble Factor de Autenticación (2FA)	Añadir una capa de seguridad que requiere un segundo código (normalmente desde el móvil) además de la contraseña. Es la defensa más efectiva contra el robo de credenciales.
-Copias de Seguridad (Backup)	Guardar regularmente los datos importantes en un medio externo y desconectado (regla 3-2-1). Permite la recuperación ante fallos de hardware o ataques de ransomware.
-Uso de Antivirus/Firewall	El firewall bloquea el tráfico de red no autorizado, mientras que el antivirus/anti-malware protege contra códigos maliciosos conocidos en el equipo local.</table>
-Recursos Adicionales:
-Para aprender más sobre Ciberseguridad, visita el Portal del Instituto Nacional de Ciberseguridad (INCIBE) (Este enlace se abre en una nueva pestaña).
+<h3>Recursos Adicionales:</h3>
+<p>Para aprender más sobre <strong>Ciberseguridad</strong>, visita el <a href="https://www.incibe.es">Portal del Instituto Nacional de Ciberseguridad (INCIBE)</a> (Este enlace se abre en una nueva pestaña).</p>
 
-Volver al Índice
-
-© [Nombre del Alumno] - Actividad HTML SMR
+<a href="índice">volver al Índice</a>
+<hr>
+<p>© [Nombre del Alumno] - Actividad HTML SMR</p>
 </body>
 </html>
 
