--- a/Actividad 3/actividad3.html
+++ b/Actividad 3/actividad3.html
@@ -28,7 +28,7 @@
 <li><strong>Placa Base (Motherboard):</strong> La <strong>plataforma central</strong> que interconecta todos los demás componentes.</li>
 <li><strong>Almacenamiento (SSD/HDD):</strong> Guarda la información de forma <strong>persistente.</strong></li>
 <li><strong>Fuente de Alimentación (PSU):</strong> Convierte la corriente alterna (AC) en la continua (DC).</li></ul>
-<a href="índice">volver al Índice</a>
+<a href="#índice">volver al Índice</a>
 <hr>
 <h2 id="Consejos">5 Consejos de Ciberseguridad Básica</h2>
 <p>La seguridad pasiva y activa es crítica. Estos 5 consejos son la base para proteger cualquier sistema:</p>
@@ -71,7 +71,7 @@
 <h3>Recursos Adicionales:</h3>
 <p>Para aprender más sobre <strong>Ciberseguridad</strong>, visita el <a href="https://www.incibe.es">Portal del Instituto Nacional de Ciberseguridad (INCIBE)</a> (Este enlace se abre en una nueva pestaña).</p>
 
-<a href="índice">volver al Índice</a>
+<a href="#índice">volver al Índice</a>
 <hr>
 <p>© [Nombre del Alumno] - Actividad HTML SMR</p>
 </body>
