--- a/Actividad 4/noticias_texto.html
+++ b/Actividad 4/noticias_texto.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>noticias_semantico.html.</title>
 </head>
 <body>
+    <header>
     <H1>Noticias SMR</H1>
     <P>El boletín de clase sobre tecnología y actualidad</P>
     <nav>
@@ -31,20 +32,30 @@
     </section>
 
     <section>
-
-    <article>
     <h2>ARTÍCULOS DESTACADOS</h2>
+    <article>
     <h3>La importancia del HTML semántico</h3>
     <p>Usar etiquetas con significado ayuda a los buscadores, facilita la accesibilidad y mejora la comprensión del código.</p>
     <p>Por ejemplo, un lector de plantilla entiende que un <header>es un cabecera y no solo un contenedor visual.</p>
+    </article>
+
+    <article>
     <h3>Buenas prácticas de estructura</h3>
     <p>Usar encabezados en orden (h1, h2, etc.) permite una jerarquía clara en el contenido.</p>
+    </article>
+
+    <aside>
     <h4>NOTAS DEL PROFESOR</h4>
         <ul><li>Repasar las etiquetas semánticas antes del examen.</li></ul>
         <ul><li>Usar siempre estructura clara y jerarquía de títulos.</li></ul>
         <ul><li>Comentar el código para mayor claridad.</li></ul>
+    </aside>
+    </section>
+    </main>
+    <footer>
     <p>© 2025 Departamento de Informática - IES Medina Azahara</p>
     <p>Contacto: <a href="https://www.juntadeandalucia.es/educacion/portales/web/cep-cordoba/datos-del-cep">profesor@centro.es</a></p>    
+    </footer>
 </body>
 </html>
 
