--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <ul>
     <li><a href="./Actividad 1/actividad 1.html"> Actividades 1</a></li>
     <li><a href="./Actividad 2/index.html"> Actividades 2</a></li>
-    <li><a href="./Actividad 3"> Actividades 3</a></li>
-    <li><a href="./Actividad 4"> Actividades 4</a></li>
-    <li><a href="./Actividad 5"> Actividades 5</a></li>
+    <li><a href="./Actividad 3/actividad3.html"> Actividades 3</a></li>
+    <li><a href="./Actividad 4/noticias_texto.html"> Actividades 4</a></li>
+    <li><a href="./Actividad 5/Actividad5.html"> Actividades 5</a></li>
     <li><a href="./Actividad 6"> Actividades 6</a></li>
 </ol>
 
